# rental-tax-pipeline

./: .env.template  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  config.yaml  interest_expense.template.yaml  pyproject.toml  requirements.txt  vendor_mapping.yaml
docs/: phase2_verification_report.md  phase3-review-workflow-spec.md  status.md
docs/superpowers/plans/: 2026-04-09-build-str-from-margarete.md
docs/superpowers/specs/: 2026-04-09-build-str-from-margarete-design.md
src/taxauto/: __init__.py  _serialize.py  cli.py  config.py
src/taxauto/aggregate/: by_property.py  rentqc_to_template.py
src/taxauto/bootstrap/: learn_from_prior.py  learn_from_rentqc.py
src/taxauto/categorize/: learning.py  mapper.py
src/taxauto/guards/: chase_reconcile.py  double_count.py  duplicates.py  (+3 more)
tests/: conftest.py  test_aggregate.py  test_auto_skip.py  test_bank_parser.py  test_bootstrap.py  test_bootstrap_rentqc.py  test_build_str_cli.py  test_chase_checking.py  test_chase_common.py  test_chase_credit.py  test_chase_reconcile.py  test_classifier.py  test_config.py  test_double_count_v2.py  test_end_to_end.py  test_guards.py  test_interest_expense.py  test_mapper.py  test_margarete_expenses.py  test_pdf_extractor.py  test_platform_vs_bank.py  test_pm_ltr_parser.py  test_pull_v2.py  test_push_v2.py  test_rent_qc.py  test_rentqc_cashflow.py  test_rentqc_mapping.py  test_rentqc_reconcile.py  test_sheet_create.py  test_sheets.py  test_split_property.py  test_str_sheets.py  test_template_copy.py  test_verify.py  test_writers.py
tests/fixtures/: README.md
(+32 files in other folders)
